# c2d-filtering

./: CMakeLists.txt  README.md
Matlab/: DigitalFilter.m
Matlab/Chirp/: ChirpSignal.m  addChirpResponseToBode.m
Matlab/Misc/: filter_builder.m  solveFx_to_Fz.m  syntheticDivision_by_1.m
Matlab/Tests/: test_filter_builder.m  test_filter_runner.m
include/: ContinuousTransferFunction.h  TransferFunctionDiscretizer.h  system.h
src/: ContinuousTransferFunction.cpp  TransferFunctionDiscretizer.cpp  main.cpp  system.cpp
tests/: ContinuousTransferFunctionTest.cpp  hello_test.cpp
